# PSPD_Virtualizacao

./: README.md
distributed_string_processor/: =3.1.2  Makefile  README.md  compile_servers.sh  install.sh  install_servers.sh  server_a  server_b  setup.py  string_processor.grpc.pb.cc  string_processor.grpc.pb.h  string_processor.pb.cc  string_processor.pb.h
distributed_string_processor/cpp_server_a/: server_a.cpp
distributed_string_processor/cpp_server_b/: server_b.cpp
distributed_string_processor/distributed_string_processor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
distributed_string_processor/grpc_stub/: client.py  constraints.txt  requirements.in  requirements.txt  string_processor_pb2.py  string_processor_pb2_grpc.py  web_server.py
distributed_string_processor/proto/: __init__.py  string_processor.proto
distributed_string_processor_test_suite/: .coverage
distributed_string_processor_test_suite/cpp_server_a/tests/: CMakeLists.txt
distributed_string_processor_test_suite/cpp_server_b/tests/: CMakeLists.txt
distributed_string_processor_test_suite/grpc_stub/: client.py  requirements.txt  web_server.py
distributed_string_processor_test_suite/htmlcov/: d_ac63ff450d29ccdf___init___py.html  d_ac63ff450d29ccdf_client_py.html  d_ac63ff450d29ccdf_web_server_py.html  d_f76b121c5db5815e_conftest_py.html  d_f76b121c5db5815e_test_client_py.html  d_f76b121c5db5815e_test_web_server_py.html  index.html  status.json
distributed_string_processor_test_suite/tests/cpp/: CMakeCache.txt  CMakeLists.txt  test_server_a.cpp  test_server_b.cpp
(+11 files in other folders)
